src/test/ui/associated-types/bound-lifetime-in-return-only.local.stderr
error[E0581]: return type references lifetime `'a`, which is not constrained by the fn input types
  --> $DIR/bound-lifetime-in-return-only.rs:23:28
   |
LL |     let _: for<'a> fn() -> &'a i32 = loop { };
   |                            ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0581`.
